@@ -1,0 +1,55 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+ Copyright 2009 Brian Pellin.
+     
+ This file is part of KeePassDroid.
+
+  KeePassDroid is free software: you can redistribute it and/or modify
+  it under the terms of the GNU General Public License as published by
+  the Free Software Foundation, either version 3 of the License, or
+  (at your option) any later version.
+
+  KeePassDroid is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU General Public License for more details.
+
+  You should have received a copy of the GNU General Public License
+  along with KeePassDroid.  If not, see <http://www.gnu.org/licenses/>.
+-->
+<!--
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="wrap_content"
+  android:layout_height="wrap_content">
+    -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="wrap_content"
+  android:layout_height="wrap_content"
+  android:orientation="vertical">
+	<TextView android:id="@+id/text"
+	  android:layout_width="wrap_content"
+	  android:layout_height="wrap_content"
+	  android:text="@string/browser_intall_text"
+	/>
+	<LinearLayout 
+	  android:layout_width="fill_parent"
+	  android:layout_height="fill_parent"
+	  android:gravity="center_horizontal"
+	  android:orientation="vertical">
+		<Button android:id="@+id/install_market"
+		  android:layout_width="200sp"
+		  android:layout_height="wrap_content"
+		  android:text="@string/install_from_market"
+		/>
+		<Button android:id="@+id/install_web"
+		  android:layout_width="200sp"
+		  android:layout_height="wrap_content"
+		  android:text="@string/install_from_website"
+		/>
+		<Button android:id="@+id/cancel"
+		  android:layout_width="200sp"
+		  android:layout_height="wrap_content"
+		  android:text="@string/cancel"
+		/>
+	</LinearLayout>
+</LinearLayout>
