@@ -38,11 +38,19 @@
   	  android:layout_alignParentBottom="true"
   	  android:layout_toRightOf="@id/open"
   	  android:width="100sp"/>
+	<ImageButton android:id="@+id/browse_button"
+	  android:layout_width="wrap_content"
+	  android:layout_height="wrap_content"
+	  android:src="@drawable/ic_launcher_folder_small"	
+	  android:layout_alignParentRight="true"
+	  android:layout_alignTop="@id/file_filename"
+	/>
   	<EditText android:id="@+id/file_filename"
   	  android:layout_width="fill_parent"
   	  android:layout_height="wrap_content"
   	  android:singleLine="true"
   	  android:layout_above="@id/open"
+  	  android:layout_toLeftOf="@id/browse_button"
   	  android:text="/sdcard/keepass/keepass.kdb"/>
 	<TextView android:id="@+id/label_open_by_filename" 
 	  android:layout_width="fill_parent"
