@@ -25,11 +25,19 @@
 	  android:layout_height="wrap_content"
 	  style="?android:attr/listSeparatorTextViewStyle"
 	  android:text="@string/enter_filename"/>
+	<ImageButton android:id="@+id/browse_button"
+	  android:layout_width="wrap_content"
+	  android:layout_height="wrap_content"
+	  android:src="@drawable/ic_launcher_folder_small"	
+	  android:layout_alignParentRight="true"
+	  android:layout_alignTop="@id/file_filename"
+	/>
   	<EditText android:id="@+id/file_filename"
   	  android:layout_width="fill_parent"
   	  android:layout_height="wrap_content"
   	  android:singleLine="true"
   	  android:layout_below="@id/label_open_by_filename"
+  	  android:layout_toLeftOf="@id/browse_button"
   	  android:text="/sdcard/keepass/keepass.kdb"/>
   	<Button android:id="@+id/open"
   	  android:text="@string/menu_open"
