@@ -20,6 +20,8 @@
 <resources>
     <string name="donate_url"><![CDATA[https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=8246230]]></string>
     <string name="homepage">http://www.keepassdroid.com</string>
+    <string name="oi_filemanager_market">market://details?id=org.openintents.filemanager</string>
+    <string name="oi_filemanager_web">http://openintents.googlecode.com/files/FileManager-1.1.3.apk</string>
     
     <!--  Preference settings -->
     <string name="algorithm_key">algorithm</string>
